--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <title>Javascript sorting</title>
 </head>
 <body>
+<h2>Normally using simple sort method in Javascript is insufficient to correctly sort items like "version 10 and version 2"</h2>
+<h2>Unlike PHP, Javascript does not have a ready-to-use method for this purpose.</h2>
+<h2>This simple code suggests a solution</h2>
 <h1>Enter items to compare separated by commas:</h1>
   <form id="numberForm">
     <input type="text" id="in" name="numbers" value= 'Version 100, version 1, Version 9.999, version 3.4' style='width: 50%'>
