--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       e.preventDefault(); 
 
       const numbers = input.value
-        .split(/[,;]/)
+        .split(',')
         .map(num => num.trim()).filter(a=>a.length>0);
         console.log(numbers);
        numbers.sort((a,b)=>a.localeCompare(b,undefined,{numeric:true,sensitivity:'base'}));
@@ -30,9 +30,11 @@
 <div>Normally using simple sort method in Javascript is insufficient to correctly sort items like "version 10 and version 2"</div>
 <div>Unlike PHP, Javascript does not have a ready-to-use method for this purpose.</div>
 <div>This simple code suggests a solution</div>
-<h1>Enter items to compare separated by commas:</h1>
+<h1>Enter items to sort separated by commas:</h1>
   <form id="numberForm">
-    <input type="text" id="in" name="numbers" value= 'Version 100, version 1, Version 9.999, version 3.4' style='width: 50%'>
+    <textarea id="in" name="numbers" style="width: 80%; height: 100px;">
+    V 100, v 1, V 9.999, v 3.4
+    </textarea>
     <button type="submit">Submit</button>
   </form>
 
